# LLM-Scaffolding-Calculator

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/: config.py
src/agent/: agent.py  claude_agent.py  themes.py  tool_executor.py  tools.py  ui_state.py
src/app/: main.py
src/static/: client.js  index.html
tests/: conftest.py  test_agent.py  test_agent_tool_use.py  test_claude_agent.py  test_endpoints.py  test_phase5_layout_callbacks.py  test_phase6_theming.py  test_phase7_hierarchy.py  test_phase7_integration.py  test_websocket.py
